Attempt to repair background on Mobile

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -232,6 +232,7 @@ body {
     .hero, #second-hero, #break {
         background-attachment: scroll; /* Prevents fixed issues */
         background-size: contain; /* Adjust the size for mobile */
+        background-repeat: repeat-y;
         background-position: center top; /* Show the top of the image */
     }
 
